add user menu and implemented all the necessary user functions

--- a/build.gradle
+++ b/build.gradle
@@ -10,14 +10,11 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:jupiterApiVersion'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:jupiterEngineVersion'
+    implementation group: 'mysql', name: 'mysql-connector-java', version: mysqlVersion
 }
 
 test {
     useJUnitPlatform()
-}
-
-dependencies {
-     implementation group: 'mysql', name: 'mysql-connector-java', version: mysqlVersion
 }
